--- a/ExilenceNextApp/.eslintrc.json
+++ b/ExilenceNextApp/.eslintrc.json
@@ -24,6 +24,7 @@
   "plugins": ["react", "@typescript-eslint"],
   "rules": {
     "no-unused-vars": 0,
+    "prefer-const": 1,
     "@typescript-eslint/no-unused-vars": [
       1,
       { "args": "all", "ignoreRestSiblings": true, "argsIgnorePattern": "^_" }
