--- a/ExilenceNextApp/package.json
+++ b/ExilenceNextApp/package.json
@@ -17,11 +17,11 @@
     "axios": "^0.21.0",
     "axios-observable": "^1.1.2",
     "clsx": "^1.0.4",
+    "electron-context-menu": "^2.3.0",
+    "electron-devtools-installer": "^3.1.1",
     "electron-is-dev": "^1.1.0",
     "electron-log": "^4.2.4",
     "electron-updater": "^4.2.0",
-    "electron-devtools-installer": "^3.1.1",
-    "electron-context-menu": "^2.3.0",
     "electron-window-state": "^5.0.3",
     "export-to-csv": "^0.2.1",
     "formik": "^2.0.8",
@@ -41,6 +41,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-i18next": "^11.7.3",
+    "react-markdown": "^5.0.2",
     "react-number-format": "^4.3.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
