--- a/ExilenceNextApp/package.json
+++ b/ExilenceNextApp/package.json
@@ -34,7 +34,7 @@
     "mobx": "^6.0.1",
     "mobx-logger": "^0.7.1",
     "mobx-persist": "^0.4.1",
-    "mobx-react": "^7.0.0",
+    "mobx-react-lite": "^3.2.0",
     "mobx-utils": "^6.0.1",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
