--- a/ExilenceNextApp/package.json
+++ b/ExilenceNextApp/package.json
@@ -28,6 +28,7 @@
     "formik": "^2.0.8",
     "highcharts": "^9.0.0",
     "highcharts-react-official": "^3.0.0",
+    "html-to-image": "^1.6.2",
     "i18next": "^19.8.2",
     "i18next-xhr-backend": "^3.2.0",
     "localforage": "^1.7.3",
