fix(protocol): move protocol defining back to instance handling

--- a/ExilenceNextApp/package.json
+++ b/ExilenceNextApp/package.json
@@ -152,7 +152,7 @@
       "category": "Utility"
     },
     "protocols": {
-      "name": "exilence-next",
+      "name": "exilence",
       "schemes": [
         "exilence"
       ]
