--- a/ExilenceNextApp/package.json
+++ b/ExilenceNextApp/package.json
@@ -13,6 +13,7 @@
     "@sentry/browser": "^6.2.3",
     "@sentry/electron": "^2.4.0",
     "@sentry/react": "^6.2.3",
+    "@types/react": "^17.0.26",
     "@types/reactour": "^1.13.1",
     "@types/universal-analytics": "^0.4.3",
     "axios": "^0.21.1",
@@ -46,7 +47,7 @@
     "react-number-format": "^4.3.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^4.0.0",
+    "react-scripts": "^4.0.3",
     "react-table": "^7.6.0",
     "react-toastify": "^6.0.9",
     "reactour": "^1.18.3",
@@ -98,7 +99,7 @@
     "@types/electron-is-dev": "^1.1.1",
     "@types/jest": "26.0.15",
     "@types/node": "14.14.2",
-    "@types/react-dom": "16.9.8",
+    "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.6",
     "@types/react-table": "^7.0.24",
     "@types/uuid": "^8.3.0",
